--- a/Servicios.html
+++ b/Servicios.html
@@ -25,6 +25,33 @@
         </li>
         
             </nav>
+            <main>
+                <h1>Nuestro Food Truck en tu evento!</h1>
+                <form method="" action="" class="form">
+                    Nombre:<input type="text" name="Nombre."> Apellido:<input type="text" name="Apellido"> 
+                    <br>
+                    <br>
+                    Dia del evento:<input type="date">
+                    <br>
+                    <br>
+                     Menú salado o dulce?<br>
+                        Dulce<input type="radio" name="Dulce">
+                        Salado<input type="radio" name="Salado">
+                        Ambas<input type="radio" name="Ambas">
+                    <br>
+                    <br>
+                    En que horario es el evento?<select name="Turno" id="Turno">
+                        <option value="Mañana">Mañana</option>
+                        <option value="Tarde">Tarde</option>
+                        <option value="Noche">Noche</option>
+                        <option value="Madrugada">Madrugada</option>
+                    </select>
+                    <br>
+                    <br>
+                    <input type="submit" name="Enviar"> <input type="reset" name="Reestablecer">
+                    </form>
+                    </main>
+            </main>
         </div>
         <footer>
             <p class="thanks"><b> Gracias por visitarnos!</b></p> <aside><a href="https://www.instagram.com/gofressn/"><img src="Instagram_icon.png.webp" width="30"></a></aside>
