--- a/Servicios.html
+++ b/Servicios.html
@@ -21,7 +21,7 @@
            <a href="Productos.html"><b> Productos</b></a>
             <a href="Servicios.html"><b>Servicios</b></a>
              <a href="Sobrenosotros.html"><b>Sobre Nosotros</b></a>
-          
+             <a href="tarea3.html"><b>Horarios de atencion</b></a>
         </li>
         
             </nav>
